latte/tests/bad/class_hierarchy/undefined_super.lat
class A extends S {}

int main() {
  return 0;
}
